<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="86dp"
                    app:srcCompat="@drawable/ic_ftouch_retail" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Mobile No"
                    android:textColorHint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#0000"
                        android:focusable="true"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:padding="14dp"
                        android:textColor="@color/black" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#555555" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="PASSWORD"
                    android:textColorHint="@color/black"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#555555" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#0000"
                        android:focusable="true"
                        android:inputType="textPassword"
                        android:padding="14dp"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:textColorHint="@color/white"
                    android:visibility="gone"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#555555" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#0000"
                        android:focusable="true"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:padding="14dp"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="5dp">

                    <CheckBox
                        android:id="@+id/chk_remember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lyout_passwd"
                        android:layout_alignLeft="@+id/lyout_passwd"
                        android:text="REMEMBER ME"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:visibility="gone"
                        android:padding="5dp"
                        android:text="@string/forgot"
                        android:textColor="@color/blue"
                        android:textSize="15sp" />

                </LinearLayout>


                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="LOGIN"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/login_layout"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:text="@string/newUser"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_createAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/login_layout"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:text="SIGN UP"
                        android:textColor="@color/blue"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>